Fix some inline-block style-resolution issues. Bug 146409, r=kin, r=dbaron